--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ branches:
 install:
 - git remote -v
 script:
-- "chmod 755 ./sync.sh && ./sync.sh"
+- "chmod 755 ./sync.sh && ./sync.sh 10"
 before_install:
 - export start_time=$(date +%s)
 - mkdir -p ~/.docker
@@ -24,3 +24,4 @@ before_install:
 - chmod 600 ~/.docker/config.json
 - eval $(ssh-agent)
 - ssh-add ~/.ssh/id_rsa
+- df -h
